--- a/templates/base.html
+++ b/templates/base.html
@@ -53,20 +53,29 @@
 
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="active" href="{% url 'home' %}">Blog</a></li> |
-                <br>
+                <li><a class="active" href="{% url 'home' %}">Home</a></li>
+
                 {% if user.is_authenticated %}
+                    <li class="dropdown"><a href="">{{ user.username }} <span><i
+                            class="bi bi-arrow-bar-down"></i></span></a>
+                        <ul>
+                            <li><a href="{% url 'password_change' %}">change_pass</a></li>
+                        </ul>
+                    </li> ||||
 
                     <form action="{% url 'logout' %}" method="post">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-primary">Logout</button>
+                        <button type="submit" class="btn btn-outline-light">logout</button>
                     </form>
 
                 {% else %}
+                    <li class="dropdown"><a href="">User <span><i class="bi bi-arrow-bar-down"></i></span></a>
+                        <ul>
+                            <li><a href="{% url 'signup' %}">Signup</a></li>
+                            <li><a href="{% url 'login' %}">Login</a></li>
+                        </ul>
+                    </li>
 
-                    <li><a href="{% url 'signup' %}">Signup</a></li>
-
-                    <li><a href="{% url 'login' %}">Login</a></li>
 
                 {% endif %}
             </ul>
