--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,10 @@
             <ul>
                 <li><a class="active" href="{% url 'home' %}">Home</a></li>
 
+
                 {% if user.is_authenticated %}
+                    <li><a class="active" href="{% url 'new_post' %}">Add Your Post</a></li>
+
                     <li class="dropdown"><a href="">{{ user.username }} <span><i
                             class="bi bi-arrow-bar-down"></i></span></a>
                         <ul>
