--- a/templates/home.html
+++ b/templates/home.html
@@ -26,35 +26,37 @@
 
           <div class="col-lg-8 entries">
 
+
+              {% for post in posts %}
+
             <article class="entry">
 
               <div class="entry-img">
-                <img src="{% static 'assets/img/blog/blog-1.jpg'%}" alt="" class="img-fluid">
+                <img src="{{ post.photo.url }}" alt="" class="img-fluid">
               </div>
 
               <h2 class="entry-title">
-                <a href="blog-single.html">Dolorum optio tempore voluptas dignissimos cumque fuga qui quibusdam quia</a>
+                <a href="blog-single.html">{{ post.short_description | truncatewords:10}}</a>
               </h2>
 
               <div class="entry-meta">
                 <ul>
-                  <li class="d-flex align-items-center"><i class="bi bi-person"></i> <a href="blog-single.html">John Doe</a></li>
-                  <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <a href="blog-single.html"><time datetime="2020-01-01">Jan 1, 2020</time></a></li>
+                  <li class="d-flex align-items-center"><i class="bi bi-person"></i> <a href="blog-single.html">{{ post.author }}</a></li>
+                  <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <a href="blog-single.html">{{ post.created_at | timesince }} ago </a></li>
                   <li class="d-flex align-items-center"><i class="bi bi-chat-dots"></i> <a href="blog-single.html">12 Comments</a></li>
                 </ul>
               </div>
 
               <div class="entry-content">
-                <p>
-                  Similique neque nam consequuntur ad non maxime aliquam quas. Quibusdam animi praesentium. Aliquam et laboriosam eius aut nostrum quidem aliquid dicta.
-                  Et eveniet enim. Qui velit est ea dolorem doloremque deleniti aperiam unde soluta. Est cum et quod quos aut ut et sit sunt. Voluptate porro consequatur assumenda perferendis dolore.
-                </p>
+                <p>{{ post.blog_body | truncatewords:35}}</p>
                 <div class="read-more">
                   <a href="blog-single.html">Read More</a>
                 </div>
               </div>
 
-            </article><!-- End blog entry -->
+            </article>
+              {% endfor %}
+              <!-- End blog entry -->
 
 
             <!--pagination's-->
