--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -53,33 +53,21 @@
 
                         <div class="entry-footer">
                             <ul class="cats">
-                                {% if user.is_authenticated %}
-                                    <a href="{% url 'edit_post' post_detail.pk %}"><button type="button" class="btn btn-primary btn-sm">Edit</button></a>
-                                    <a href="{% url 'delete_post' post_detail.pk %}"><button type="button" class="btn btn-warning btn-sm">Delete</button></a>
+                                {% if user.username == post_detail.author.username %}
+                                    <a href="{% url 'edit_post' post_detail.pk %}">
+                                        <button type="button" class="btn btn-primary btn-sm">Edit</button>
+                                    </a>
+                                    <a href="{% url 'delete_post' post_detail.pk %}">
+                                        <button type="button" class="btn btn-warning btn-sm">Delete</button>
+                                    </a>
                                 {% else %}
-                                <h3>if you want to edite or delete please <a href="{% url 'login' %}"><span class="text-bg-success">login</span></a></h3>
+                                    <h3>if you want to edite or delete please <a href="{% url 'login' %}"><span
+                                            class="text-bg-success">login</span></a></h3>
                                 {% endif %}
                             </ul>
                         </div>
 
                     </article><!-- End blog entry -->
-
-                    <div class="blog-author d-flex align-items-center">
-                        <img src="assets/img/blog/blog-author.jpg" class="rounded-circle float-left" alt="">
-                        <div>
-                            <h4>Jane Smith</h4>
-                            <div class="social-links">
-                                <a href="https://twitters.com/#"><i class="bi bi-twitter"></i></a>
-                                <a href="https://facebook.com/#"><i class="bi bi-facebook"></i></a>
-                                <a href="https://instagram.com/#"><i class="biu bi-instagram"></i></a>
-                            </div>
-                            <p>
-                                Itaque quidem optio quia voluptatibus dolorem dolor. Modi eum sed possimus accusantium.
-                                Quas repellat voluptatem officia numquam sint aspernatur voluptas. Esse et accusantium
-                                ut unde voluptas.
-                            </p>
-                        </div>
-                    </div><!-- End blog author bio -->
 
 
                     <!--comments-->
@@ -90,7 +78,6 @@
 
                         <div id="comment-1" class="comment">
                             <div class="d-flex">
-                                <div class="comment-img"><img src="assets/img/blog/comments-1.jpg" alt=""></div>
                                 <div>
                                     <h5><a href="">Georgia Reader</a> <a href="#" class="reply"><i
                                             class="bi bi-reply-fill"></i> Reply</a></h5>
@@ -104,102 +91,6 @@
                             </div>
                         </div><!-- End comment #1 -->
 
-                        <div id="comment-2" class="comment">
-                            <div class="d-flex">
-                                <div class="comment-img"><img src="assets/img/blog/comments-2.jpg" alt=""></div>
-                                <div>
-                                    <h5><a href="">Aron Alvarado</a> <a href="#" class="reply"><i
-                                            class="bi bi-reply-fill"></i> Reply</a></h5>
-                                    <time datetime="2020-01-01">01 Jan, 2020</time>
-                                    <p>
-                                        Ipsam tempora sequi voluptatem quis sapiente non. Autem itaque eveniet saepe.
-                                        Officiis illo ut beatae.
-                                    </p>
-                                </div>
-                            </div>
-
-                            <div id="comment-reply-1" class="comment comment-reply">
-                                <div class="d-flex">
-                                    <div class="comment-img"><img src="assets/img/blog/comments-3.jpg" alt=""></div>
-                                    <div>
-                                        <h5><a href="">Lynda Small</a> <a href="#" class="reply"><i
-                                                class="bi bi-reply-fill"></i> Reply</a></h5>
-                                        <time datetime="2020-01-01">01 Jan, 2020</time>
-                                        <p>
-                                            Enim ipsa eum fugiat fuga repellat. Commodi quo quo dicta. Est ullam
-                                            aspernatur ut vitae quia mollitia id non. Qui ad quas nostrum rerum sed
-                                            necessitatibus aut est. Eum officiis sed repellat maxime vero nisi natus.
-                                            Amet nesciunt nesciunt qui illum omnis est et dolor recusandae.
-
-                                            Recusandae sit ad aut impedit et. Ipsa labore dolor impedit et natus in
-                                            porro aut. Magnam qui cum. Illo similique occaecati nihil modi eligendi.
-                                            Pariatur distinctio labore omnis incidunt et illum. Expedita et dignissimos
-                                            distinctio laborum minima fugiat.
-
-                                            Libero corporis qui. Nam illo odio beatae enim ducimus. Harum reiciendis
-                                            error dolorum non autem quisquam vero rerum neque.
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <div id="comment-reply-2" class="comment comment-reply">
-                                    <div class="d-flex">
-                                        <div class="comment-img"><img src="assets/img/blog/comments-4.jpg" alt=""></div>
-                                        <div>
-                                            <h5><a href="">Sianna Ramsay</a> <a href="#" class="reply"><i
-                                                    class="bi bi-reply-fill"></i> Reply</a></h5>
-                                            <time datetime="2020-01-01">01 Jan, 2020</time>
-                                            <p>
-                                                Et dignissimos impedit nulla et quo distinctio ex nemo. Omnis quia
-                                                dolores cupiditate et. Ut unde qui eligendi sapiente omnis ullam.
-                                                Placeat porro est commodi est officiis voluptas repellat quisquam
-                                                possimus. Perferendis id consectetur necessitatibus.
-                                            </p>
-                                        </div>
-                                    </div>
-
-                                </div><!-- End comment reply #2-->
-
-                            </div><!-- End comment reply #1-->
-
-                        </div><!-- End comment #2-->
-
-                        <div id="comment-3" class="comment">
-                            <div class="d-flex">
-                                <div class="comment-img"><img src="assets/img/blog/comments-5.jpg" alt=""></div>
-                                <div>
-                                    <h5><a href="">Nolan Davidson</a> <a href="#" class="reply"><i
-                                            class="bi bi-reply-fill"></i> Reply</a></h5>
-                                    <time datetime="2020-01-01">01 Jan, 2020</time>
-                                    <p>
-                                        Distinctio nesciunt rerum reprehenderit sed. Iste omnis eius repellendus quia
-                                        nihil ut accusantium tempore. Nesciunt expedita id dolor exercitationem
-                                        aspernatur aut quam ut. Voluptatem est accusamus iste at.
-                                        Non aut et et esse qui sit modi neque. Exercitationem et eos aspernatur. Ea est
-                                        consequuntur officia beatae ea aut eos soluta. Non qui dolorum voluptatibus et
-                                        optio veniam. Quam officia sit nostrum dolorem.
-                                    </p>
-                                </div>
-                            </div>
-
-                        </div><!-- End comment #3 -->
-
-                        <div id="comment-4" class="comment">
-                            <div class="d-flex">
-                                <div class="comment-img"><img src="assets/img/blog/comments-6.jpg" alt=""></div>
-                                <div>
-                                    <h5><a href="">Kay Duggan</a> <a href="#" class="reply"><i
-                                            class="bi bi-reply-fill"></i> Reply</a></h5>
-                                    <time datetime="2020-01-01">01 Jan, 2020</time>
-                                    <p>
-                                        Dolorem atque aut. Omnis doloremque blanditiis quia eum porro quis ut velit
-                                        tempore. Cumque sed quia ut maxime. Est ad aut cum. Ut exercitationem non in
-                                        fugiat.
-                                    </p>
-                                </div>
-                            </div>
-
-                        </div><!-- End comment #4 -->
 
                         <div class="reply-form">
                             <h4>Leave a Reply</h4>
@@ -236,87 +127,13 @@
                 </div><!-- End blog entries list -->
 
                 <div class="col-lg-4">
+                {% block sidebar %}
+                {% include 'sidebar.html' %}
+                {% endblock %}
 
-                    <div class="sidebar">
-
-                        <h3 class="sidebar-title">Search</h3>
-                        <div class="sidebar-item search-form">
-                            <form action="">
-                                <input type="text">
-                                <button type="submit"><i class="bi bi-search"></i></button>
-                            </form>
-                        </div><!-- End sidebar search formn-->
-
-                        <h3 class="sidebar-title">Categories</h3>
-                        <div class="sidebar-item categories">
-                            <ul>
-                                <li><a href="#">General <span>(25)</span></a></li>
-                                <li><a href="#">Lifestyle <span>(12)</span></a></li>
-                                <li><a href="#">Travel <span>(5)</span></a></li>
-                                <li><a href="#">Design <span>(22)</span></a></li>
-                                <li><a href="#">Creative <span>(8)</span></a></li>
-                                <li><a href="#">Educaion <span>(14)</span></a></li>
-                            </ul>
-                        </div><!-- End sidebar categories-->
-
-                        <h3 class="sidebar-title">Recent Posts</h3>
-                        <div class="sidebar-item recent-posts">
-                            <div class="post-item clearfix">
-                                <img src="assets/img/blog/blog-recent-1.jpg" alt="">
-                                <h4><a href="blog-single.html">Nihil blanditiis at in nihil autem</a></h4>
-                                <time datetime="2020-01-01">Jan 1, 2020</time>
-                            </div>
-
-                            <div class="post-item clearfix">
-                                <img src="assets/img/blog/blog-recent-2.jpg" alt="">
-                                <h4><a href="blog-single.html">Quidem autem et impedit</a></h4>
-                                <time datetime="2020-01-01">Jan 1, 2020</time>
-                            </div>
-
-                            <div class="post-item clearfix">
-                                <img src="assets/img/blog/blog-recent-3.jpg" alt="">
-                                <h4><a href="blog-single.html">Id quia et et ut maxime similique occaecati ut</a></h4>
-                                <time datetime="2020-01-01">Jan 1, 2020</time>
-                            </div>
-
-                            <div class="post-item clearfix">
-                                <img src="assets/img/blog/blog-recent-4.jpg" alt="">
-                                <h4><a href="blog-single.html">Laborum corporis quo dara net para</a></h4>
-                                <time datetime="2020-01-01">Jan 1, 2020</time>
-                            </div>
-
-                            <div class="post-item clearfix">
-                                <img src="assets/img/blog/blog-recent-5.jpg" alt="">
-                                <h4><a href="blog-single.html">Et dolores corrupti quae illo quod dolor</a></h4>
-                                <time datetime="2020-01-01">Jan 1, 2020</time>
-                            </div>
-
-                        </div><!-- End sidebar recent posts-->
-
-                        <h3 class="sidebar-title">Tags</h3>
-                        <div class="sidebar-item tags">
-                            <ul>
-                                <li><a href="#">App</a></li>
-                                <li><a href="#">IT</a></li>
-                                <li><a href="#">Business</a></li>
-                                <li><a href="#">Mac</a></li>
-                                <li><a href="#">Design</a></li>
-                                <li><a href="#">Office</a></li>
-                                <li><a href="#">Creative</a></li>
-                                <li><a href="#">Studio</a></li>
-                                <li><a href="#">Smart</a></li>
-                                <li><a href="#">Tips</a></li>
-                                <li><a href="#">Marketing</a></li>
-                            </ul>
-                        </div><!-- End sidebar tags-->
-
-                    </div><!-- End sidebar -->
-
-                </div><!-- End blog sidebar -->
+                </div>
 
             </div>
-
-        </div>
     </section><!-- End Blog Single Section -->
 
 
