--- a/templates/home.html
+++ b/templates/home.html
@@ -4,85 +4,78 @@
 
     <!-- ======= Blog Section ======= -->
     <section class="breadcrumbs">
-      <div class="container">
+        <div class="container">
 
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Blog</h2>
+            <div class="d-flex justify-content-between align-items-center">
+                <h2>Blog</h2>
 
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Blog</li>
-          </ol>
+                <ol>
+                    <li><a href="index.html">Home</a></li>
+                    <li>Blog</li>
+                </ol>
+            </div>
+
         </div>
-
-      </div>
     </section><!-- End Blog Section -->
 
     <!-- ======= Blog Section ======= -->
     <section id="blog" class="blog">
-      <div class="container" data-aos="fade-up">
+        <div class="container" data-aos="fade-up">
 
-        <div class="row">
+            <div class="row">
 
-          <div class="col-lg-8 entries">
+                <div class="col-lg-8 entries">
 
-                {% if posts %}
-              {% for post in posts %}
+                    {% if posts %}
+                    {% for post in posts %}
 
-            <article class="entry">
+                        <article class="entry">
 
-              <div class="entry-img">
-                <img src="{{ post.photo.url }}" alt="" class="img-fluid">
-              </div>
+                            <div class="entry-img">
+                                <img src="{{ post.photo.url }}" alt="" class="img-fluid">
+                            </div>
 
-              <h2 class="entry-title">
-                <a href="{% url 'post_detail' post.pk %}">{{ post.title | truncatewords:10}}</a>
-              </h2>
+                            <h2 class="entry-title">
+                                <a href="{% url 'post_detail' post.pk %}">{{ post.title | truncatewords:10 }}</a>
+                            </h2>
 
-              <div class="entry-meta">
-                <ul>
-                  <li class="d-flex align-items-center"><i class="bi bi-person"></i> <a href="blog-single.html">{{ post.author }}</a></li>
-                  <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <a href="blog-single.html">{{ post.created_at | timesince }} ago </a></li>
-                  <li class="d-flex align-items-center"><i class="bi bi-chat-dots"></i> <a href="blog-single.html">12 Comments</a></li>
-                </ul>
-              </div>
+                            <div class="entry-meta">
+                                <ul>
+                                    <li class="d-flex align-items-center"><i class="bi bi-person"></i> <a
+                                            href="blog-single.html">{{ post.author }}</a></li>
+                                    <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <a
+                                            href="blog-single.html">created : {{ post.created_at | timesince }}
+                                        ago </a>
+                                    </li>
+                                    <li class="d-flex align-items-center"><i class="bi bi-chat-dots"></i> <a
+                                            href="blog-single.html">12 Comments</a></li>
+                                </ul>
+                            </div>
 
-              <div class="entry-content">
-                <p>{{ post.blog_body | truncatewords:35}}</p>
-                <div class="read-more">
-                  <a href="{% url 'post_detail' post.pk%}">Read More</a>
-                </div>
-              </div>
+                            <div class="entry-content">
+                                <p>{{ post.blog_body | truncatewords:35 }}</p>
+                                <div class="read-more">
+                                    <a href="{% url 'post_detail' post.pk %}">Read More</a>
+                                </div>
+                            </div>
 
-            </article>
-              {% endfor %}
-              <!-- End blog entry -->
-
-
-
-            <!--pagination's-->
-            <div class="blog-pagination">
-              <ul class="justify-content-center">
-                <li><a href="#">1</a></li>
-                <li class="active"><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-              </ul>
-            </div>
-                {% else %}
-                    <h1>there are not any post yet</h1>
+                        </article>
+                    {% endfor %}
                 {% endif %}
-          </div><!-- End blog entries list -->
+                </div>
 
-          <div class="col-lg-4">
+                <!-- End blog entries list -->
 
-            {% block sidebar %}
-                {% include 'sidebar.html' %}
-                {% endblock %}
+                <div class="col-lg-4">
 
-          </div><!-- End blog sidebar -->
+                    {% block sidebar %}
+                        {% include 'sidebar.html' %}
+                    {% endblock %}
+
+                </div><!-- End blog sidebar -->
+
+            </div>
 
         </div>
-
-      </div>
     </section><!-- End Blog Section -->
 {% endblock %}
