--- a/templates/post_by_category.html
+++ b/templates/post_by_category.html
@@ -11,7 +11,7 @@
 
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>category</li>
+            <li>{{ category.category_name }}</li>
           </ol>
         </div>
 
