add comment to post

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -74,22 +74,27 @@
 
                     <div class="blog-comments">
 
-                        <h4 class="comments-count">8 Comments</h4>
+                        <h4 class="comments-count">Comments ({{ comments.count }})</h4>
 
-                        <div id="comment-1" class="comment">
-                            <div class="d-flex">
-                                <div>
-                                    <h5><a href="">Georgia Reader</a> <a href="#" class="reply"><i
-                                            class="bi bi-reply-fill"></i> Reply</a></h5>
-                                    <time datetime="2020-01-01">01 Jan, 2020</time>
-                                    <p>
-                                        Et rerum totam nisi. Molestiae vel quam dolorum vel voluptatem et et. Est ad aut
-                                        sapiente quis molestiae est qui cum soluta.
-                                        Vero aut rerum vel. Rerum quos laboriosam placeat ex qui. Sint qui facilis et.
-                                    </p>
+
+                        {% for comment in comments %}
+                            <div id="comment-1" class="comment">
+                                <div class="d-flex">
+                                    <div>
+                                        <h5><a href="">{{ comment.user }}</a> <a href="#" class="reply"><i
+                                                class="bi bi-reply-fill"></i> Reply</a></h5>
+                                        <time datetime="2020-01-01">{{ comment.created_at | timesince }} ago</time>
+                                        <p>
+                                            {{ comment.comment }}
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div><!-- End comment #1 -->
+                        {% endfor %}
+
+
+
+                        <!-- End comment #1 -->
 
 
                         <div class="reply-form">
@@ -127,9 +132,9 @@
                 </div><!-- End blog entries list -->
 
                 <div class="col-lg-4">
-                {% block sidebar %}
-                {% include 'sidebar.html' %}
-                {% endblock %}
+                    {% block sidebar %}
+                        {% include 'sidebar.html' %}
+                    {% endblock %}
 
                 </div>
 
