--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,8 +3,8 @@
 
     <h3 class="sidebar-title">Search</h3>
     <div class="sidebar-item search-form">
-        <form action="">
-            <input type="text">
+        <form action="{% url 'search' %}" method="GET">
+            <input type="text" name="keyword">
             <button type="submit"><i class="bi bi-search"></i></button>
         </form>
     </div><!-- End sidebar search formn-->
