--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
             <ul>
                 <li><a class="active" href="{% url 'home' %}">Home</a></li>
 
+                <li><a class="active" href="{% url 'my_dashboard' %}">my dashboard</a></li>
 
                 {% if user.is_authenticated %}
                     <li><a class="active" href="{% url 'new_post' %}">Add Your Post</a></li>
