add edit and delete post by manager crud--D,E

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,8 @@
     <!-- Template Main CSS File -->
     <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- =======================================================
     * Template Name: Moderna
     * Template URL: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/
