--- a/dashboard/templates/dashboard/posts.html
+++ b/dashboard/templates/dashboard/posts.html
@@ -14,8 +14,8 @@
         <div class="col-md-9">
             {% if user.is_staff %}
 
-                <h1>All Posts</h1>
-                <a href="{% url 'add_post' %}" class="btn btn-dark text-light float-right mb-2">Add New</a>
+                <h1>All Posts--{{ post.count }}</h1>
+                <a href="{% url 'add_post_by_manager' %}" class="btn btn-dark text-light float-right mb-2">Add New</a>
                 <table class="table table-hover">
                     <thead>
                     <tr>
@@ -25,6 +25,7 @@
                         <th scope="col">title</th>
                         <th scope="col">category</th>
                         <th scope="col">author</th>
+                        <th scope="col">action</th>
 
 
                     </tr>
@@ -39,11 +40,10 @@
                             <td>{{ all_post.category }}</td>
                             <td>{{ all_post.author }}</td>
 
-
                             <td>
-                                <a href=""><i class="fa fa-edit text-success"></i></a>
+                                <a href="{% url 'edit_post_by_manager' all_post.pk %}"><i class="fa fa-edit text-success"></i></a>
                                 &nbsp;
-                                <a href=""><i
+                                <a href="{% url 'delete_post_by_manager' all_post.pk %}"><i
                                         class="fa fa-trash text-danger"></i></a>
                             </td>
 
