--- a/dashboard/templates/dashboard/all_comments.html
+++ b/dashboard/templates/dashboard/all_comments.html
@@ -41,9 +41,9 @@
                             <td>{{ comments.user }}</td>
 
                             <td>
-                                <a href=""><i class="fa fa-edit text-success"></i></a>
+{#                                <a href=""><i class="fa fa-edit text-success"></i></a>#}
                                 &nbsp;
-                                <a href=""><i
+                                <a href="{% url 'delete_comments_by_manager' comments.pk %}"><i
                                         class="fa fa-trash text-danger"></i></a>
                             </td>
 
